--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8e21311
-	trimbase = 
+	trim = prosilica_camera
+	base = 1703d0c
+	trimbase = 8e21311
 	parent = upstream
 	previous = 68c72ee
