--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = prosilica_camera
-	base = 657d633
-	trimbase = 
+	base = cb3359a
+	trimbase = 657d633
 	parent = upstream
 	previous = 68c72ee
