--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc02e0f
+	base = c501334
 	trimbase = 
 	parent = debian/kinetic/prosilica_camera
-	previous = 
+	previous = bc02e0f
