--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 863807c
+	base = 5961484
 	trimbase = 
 	parent = debian/kinetic/prosilica_camera
-	previous = 
+	previous = 863807c
