--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cb3359a
+	base = 2700081
 	trimbase = 
 	parent = release/kinetic/prosilica_camera
-	previous = 
+	previous = cb3359a
