--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2cd36f7
+	base = d6fecd3
 	trimbase = 
 	parent = rpm/kinetic/prosilica_camera
-	previous = 
+	previous = 2cd36f7
