--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e72f454
-	trimbase = 
+	trim = prosilica_camera
+	base = 2091a5e
+	trimbase = e72f454
 	parent = upstream
 	previous = 68c72ee
