--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e6344df
+	base = 4e7307e
 	trimbase = 
 	parent = debian/melodic/prosilica_camera
-	previous = 
+	previous = e6344df
