--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3f5c8dd
+	base = bc6ee58
 	trimbase = 
 	parent = debian/melodic/prosilica_camera
-	previous = 
+	previous = 3f5c8dd
