--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2091a5e
+	base = 6418850
 	trimbase = 
 	parent = release/melodic/prosilica_camera
-	previous = 
+	previous = 2091a5e
