--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a654e17
+	base = 2ebb28e
 	trimbase = 
 	parent = rpm/melodic/prosilica_camera
-	previous = 
+	previous = a654e17
