--- a/prosilica_camera/CMakeLists.txt
+++ b/prosilica_camera/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(prosilica_camera)
 # Load catkin and all dependencies required for this package
 # TODO: remove all from COMPONENTS that are not catkin packages.
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(catkin REQUIRED COMPONENTS 
    prosilica_gige_sdk
@@ -11,11 +12,13 @@ find_package(catkin REQUIRED COMPONENTS
    diagnostic_updater
    image_transport
    self_test 
-   driver_base
    rosconsole
    dynamic_reconfigure 
    camera_calibration_parsers 
-   polled_camera)
+   polled_camera
+   nodelet
+   nodelet_topic_tools
+   )
 
 find_package(Boost REQUIRED COMPONENTS thread)
 
@@ -29,9 +32,15 @@ catkin_package()
 add_library(prosilica src/libprosilica/prosilica.cpp)
 target_link_libraries(prosilica ${catkin_LIBRARIES})
 
+add_library(prosilica_nodelet src/nodes/prosilica_nodelet.cpp)
+target_link_libraries(prosilica_nodelet prosilica ${catkin_LIBRARIES})
+add_dependencies(prosilica_nodelet ${PROJECT_NAME}_gencfg)
+class_loader_hide_library_symbols(prosilica_nodelet)
+
 add_executable(prosilica_node src/nodes/prosilica_node.cpp)
 target_link_libraries(prosilica_node 
-   prosilica 
+   prosilica
+   prosilica_nodelet
    ${Boost_LIBRARIES} 
    ${catkin_LIBRARIES})
 add_dependencies(prosilica_node 
@@ -58,7 +67,7 @@ target_link_libraries(set_inhibition prosilica ${catkin_LIBRARIES})
 install(TARGETS prosilica_node write_memory read_memory set_ip set_inhibition
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
-install(TARGETS prosilica
+install(TARGETS prosilica prosilica_nodelet
    RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
@@ -66,5 +75,5 @@ install(TARGETS prosilica
 install(DIRECTORY launch
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(FILES prosilica.launch streaming.launch
+install(FILES prosilica.launch streaming.launch plugins/nodelet_plugins.xml
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
