--- a/prosilica_camera/package.xml
+++ b/prosilica_camera/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>prosilica_camera</name>
-  <version>1.9.4</version>
+  <version>1.9.5</version>
   <description>A ROS driver node for AVT/Prosilica Gigabit Ethernet (GigE) cameras.</description>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
 
@@ -10,6 +10,7 @@
   <!-- <url type="bugtracker"></url> -->
 
   <author>Maintained by William Woodall - wwoodall@willowgarage.com</author>
+  <author>Contributions by Allison Thackston - allison.thackston@nasa.gov</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
@@ -21,11 +22,12 @@
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>self_test</build_depend>
-  <build_depend>driver_base</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>camera_calibration_parsers</build_depend>
   <build_depend>polled_camera</build_depend>
   <build_depend>rosconsole</build_depend>
+  <build_depend>nodelet</build_depend>
+  <build_depend>nodelet_topic_tools</build_depend>
 
   <run_depend>prosilica_gige_sdk</run_depend>
   <run_depend>roscpp</run_depend>
@@ -35,9 +37,14 @@
   <run_depend>diagnostic_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>self_test</run_depend>
-  <run_depend>driver_base</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>camera_calibration_parsers</run_depend>
   <run_depend>polled_camera</run_depend>
+  <run_depend>nodelet</run_depend>
+  <run_depend>nodelet_topic_tools</run_depend>
+  
+  <export>
+    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
+  </export>
 
 </package>
