--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 96f599b
-	trimbase = 
+	trim = prosilica_camera
+	base = eb23668
+	trimbase = 96f599b
 	parent = upstream
 	previous = 4badef9
