--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c073514
+	base = b0f0439
 	trimbase = 
 	parent = debian/noetic/prosilica_camera
-	previous = 
+	previous = c073514
