--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 29899b1
+	base = b62ed67
 	trimbase = 
 	parent = debian/noetic/prosilica_camera
-	previous = 
+	previous = 29899b1
