--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb23668
+	base = f7fb883
 	trimbase = 
 	parent = release/noetic/prosilica_camera
-	previous = 
+	previous = eb23668
