--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3f0573f
+	base = ad7f8a9
 	trimbase = 
 	parent = rpm/noetic/prosilica_camera
-	previous = 
+	previous = 3f0573f
